--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,5 +22,5 @@
 <mat-toolbar *ngIf="isLoggedIn()" color="primary">
   <button mat-raised-button  routerLink="/" >Home </button>
   
-  <button *ngIf="isAdmin()" mat-raised-button routerLink="/addNewProduct" >Add Product</button>
+  <button *ngIf="isAdmin()" mat-raised-button routerLink="/addNewProduct" style="margin-left: 3px;" >Add Product</button>
    </mat-toolbar>
