add show image for Admin

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,4 +23,5 @@
   <button mat-raised-button  routerLink="/" >Home </button>
   
   <button *ngIf="isAdmin()" mat-raised-button routerLink="/addNewProduct" style="margin-left: 3px;" >Add Product</button>
+  <button *ngIf="isAdmin()" mat-raised-button routerLink="/showProduct" style="margin-left: 3px;" >Show Product</button>
    </mat-toolbar>
