--- a/src/app/show-product-details/show-product-details.component.html
+++ b/src/app/show-product-details/show-product-details.component.html
@@ -50,10 +50,10 @@
                      </td>
                   </ng-container>
                   <ng-container matColumnDef="Delete">
-                    <th mat-header-cell *matHeaderCellDef> <span style="color: red;">Delete Product</span>
+                    <th mat-header-cell *matHeaderCellDef> <span >Delete </span>
                   </th>
                     <td mat-cell *matCellDef="let element"><button mat-button type="button" (click)="onDeleteProduct(element.productId)">
-                        <mat-icon color="primary"> delete </mat-icon>
+                        <mat-icon color="warn"> delete </mat-icon>
 
                     </button></td>
                   </ng-container>
