--- a/src/app/show-product-details/show-product-details.component.html
+++ b/src/app/show-product-details/show-product-details.component.html
@@ -1,6 +1,6 @@
-<div class="container mt-5">
+<div class="container mt-5" style="position: relative;width: 100%;">
     <div
-        class="row justify-content-center align-items-center g-2"
+        class="row "
     >
         <div class="col-6">
             <table mat-table [dataSource]="products!" class="mat-elevation-z8">
@@ -24,7 +24,7 @@
                 </ng-container>
               
               
-                <ng-container matColumnDef="Product Actual Price">
+                <ng-container class="" matColumnDef="Product Actual Price">
                   <th mat-header-cell *matHeaderCellDef> Description
                 </th>
                   <td mat-cell *matCellDef="let element"> {{element.productActualPrice}} </td>
@@ -35,28 +35,23 @@
                     <td mat-cell *matCellDef="let element"> {{element.productDiscount
                   }} </td>
                   </ng-container>
-                  <ng-container matColumnDef="Images">
-                    <th mat-header-cell *matHeaderCellDef> Images 
+                  <ng-container matColumnDef="Actions">
+                    <th mat-header-cell *matHeaderCellDef> Actions 
                   </th>
                     <td mat-cell *matCellDef="let element"> <button mat-button type="button" (click)="onShowImages(element)">
                         <mat-icon color="primary"> image </mat-icon> </button>
+                        <button mat-button type="button" (click)="onEditProduct(element.productId)">
+                          <mat-icon color="primary"> edit </mat-icon> </button>
+                          <button mat-button type="button" (click)="onDeleteProduct(element.productId)">
+                            <mat-icon color="warn"> delete </mat-icon>
+    
+                        </button>
+                        
                      </td>
+                     
+                      
                   </ng-container>
-                  <ng-container matColumnDef="Edit">
-                    <th mat-header-cell *matHeaderCellDef> Edit 
-                  </th>
-                    <td mat-cell *matCellDef="let element"> <button mat-button type="button" (click)="onEditProduct(element.productId)">
-                        <mat-icon color="primary"> edit </mat-icon> </button>
-                     </td>
-                  </ng-container>
-                  <ng-container matColumnDef="Delete">
-                    <th mat-header-cell *matHeaderCellDef> <span >Delete </span>
-                  </th>
-                    <td mat-cell *matCellDef="let element"><button mat-button type="button" (click)="onDeleteProduct(element.productId)">
-                        <mat-icon color="warn"> delete </mat-icon>
-
-                    </button></td>
-                  </ng-container>
+                 
               
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
