adding the view details component part2

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar style="background-color: rgb(26, 20, 25);color:white">
  
-  <a  class="navbar-brand" routerLink="/home"><span>E-commerce</span> </a>
+  <a  class="navbar-brand" routerLink="/"><span>E-commerce</span> </a>
  
   <span class="example-spacer"></span>
   
