--- a/src/app/show-product-details/show-product-details.component.html
+++ b/src/app/show-product-details/show-product-details.component.html
@@ -1,65 +1,58 @@
-<div class="container mt-5" style="position: relative;width: 100%;">
-    <div
-        class="row "
-    >
-        <div class="col-6">
-            <table mat-table [dataSource]="products!" class="mat-elevation-z8">
+<div class="container mt-5">
+  <div class="row justify-content-center align-items-center g-2">
+    <div class="col-12
+    ">
+      <table mat-table [dataSource]="products!" class="mat-elevation-z8">
 
-                
-                <ng-container matColumnDef="ID">
-                  <th mat-header-cell *matHeaderCellDef> ID. </th>
-                  <td mat-cell *matCellDef="let element"> {{element.productId}} </td>
-                </ng-container>
-              
-               
-                <ng-container matColumnDef="Product name">
-                  <th mat-header-cell *matHeaderCellDef> Name </th>
-                  <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
-                </ng-container>
-              
-               
-                <ng-container matColumnDef="Product Description">
-                  <th mat-header-cell *matHeaderCellDef>  Description </th>
-                  <td mat-cell *matCellDef="let element"> {{element.productDescription}} </td>
-                </ng-container>
-              
-              
-                <ng-container class="" matColumnDef="Product Actual Price">
-                  <th mat-header-cell *matHeaderCellDef> Description
-                </th>
-                  <td mat-cell *matCellDef="let element"> {{element.productActualPrice}} </td>
-                </ng-container>
-                <ng-container matColumnDef="Product Discount">
-                    <th mat-header-cell *matHeaderCellDef>  Discount
-                  </th>
-                    <td mat-cell *matCellDef="let element"> {{element.productDiscount
-                  }} </td>
-                  </ng-container>
-                  <ng-container matColumnDef="Actions">
-                    <th mat-header-cell *matHeaderCellDef> Actions 
-                  </th>
-                    <td mat-cell *matCellDef="let element"> <button mat-button type="button" (click)="onShowImages(element)">
-                        <mat-icon color="primary"> image </mat-icon> </button>
-                        <button mat-button type="button" (click)="onEditProduct(element.productId)">
-                          <mat-icon color="primary"> edit </mat-icon> </button>
-                          <button mat-button type="button" (click)="onDeleteProduct(element.productId)">
-                            <mat-icon color="warn"> delete </mat-icon>
-    
-                        </button>
-                        
-                     </td>
-                     
-                      
-                  </ng-container>
-                 
-              
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-              </table>
-              
-              
-        </div>
-        
+
+        <ng-container matColumnDef="ID">
+          <th mat-header-cell *matHeaderCellDef> ID. </th>
+          <td mat-cell *matCellDef="let element"> {{element.productId}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="Product name">
+          <th mat-header-cell *matHeaderCellDef> Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
+        </ng-container>
+
+        <ng-container style="max-width: 35%;" matColumnDef="Product Description">
+          <th mat-header-cell *matHeaderCellDef> Description </th>
+          <td mat-cell *matCellDef="let element"> {{element.productDescription}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="Product Actual Price">
+          <th mat-header-cell *matHeaderCellDef> price
+          </th>
+          <td mat-cell *matCellDef="let element"> {{element.productActualPrice}} </td>
+        </ng-container>
+        <ng-container matColumnDef="Product Discount">
+          <th mat-header-cell *matHeaderCellDef> Discount
+          </th>
+          <td mat-cell *matCellDef="let element"> {{element.productDiscount}} </td>
+        </ng-container>
+        <ng-container matColumnDef="Actions">
+          <th mat-header-cell *matHeaderCellDef> Actions
+          </th>
+          <td mat-cell *matCellDef="let element"> <button mat-button type="button" (click)="onShowImages(element)">
+              <mat-icon color="primary"> image </mat-icon> </button>
+            <button mat-button type="button" (click)="onEditProduct(element.productId)">
+              <mat-icon color="primary"> edit </mat-icon> </button>
+            <button mat-button type="button" (click)="onDeleteProduct(element.productId)">
+              <mat-icon color="warn"> delete </mat-icon>
+
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+
+
     </div>
-    
+
+  </div>
+
 </div>
